name:                unitex-pb-parser
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/odanoburu/unitex-pb-parser#readme
license:             BSD3
license-file:        LICENSE
author:              bruno cuconato
maintainer:          bcclaro+haskell@gmail.com
copyright:           2018 bruno cuconato
category:            NLP
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: UnitexPB.Parse, UnitexPB.Type
  build-depends: base >=4.7 && <5, megaparsec > 6 && <7
  hs-source-dirs: src
  default-language: Haskell2010

executable unitex-pb-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       megaparsec > 6 && < 7
